--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>todo-edge-service</description>
     <properties>
         <java.version>11</java.version>
+        <sonar.organization>stefscharrelistitem</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
